@@ -1,6 +1,8 @@
 /*
+ * This project is licensed under the MIT license. Module model-view-viewmodel is using ZK framework licensed under LGPL (see lgpl-3.0.txt).
+ *
  * The MIT License
- * Copyright © 2014-2019 Ilkka Seppälä
+ * Copyright © 2014-2022 Ilkka Seppälä
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -20,29 +22,25 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
-
 package com.iluwatar.flyweight;
 
-import java.util.Collections;
 import java.util.List;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import lombok.extern.slf4j.Slf4j;
 
 /**
  * AlchemistShop holds potions on its shelves. It uses PotionFactory to provide the potions.
  */
+@Slf4j
 public class AlchemistShop {
 
-  private static final Logger LOGGER = LoggerFactory.getLogger(AlchemistShop.class);
-
-  private List<Potion> topShelf;
-  private List<Potion> bottomShelf;
+  private final List<Potion> topShelf;
+  private final List<Potion> bottomShelf;
 
   /**
    * Constructor.
    */
   public AlchemistShop() {
-    PotionFactory factory = new PotionFactory();
+    var factory = new PotionFactory();
     topShelf = List.of(
         factory.createPotion(PotionType.INVISIBILITY),
         factory.createPotion(PotionType.INVISIBILITY),
@@ -68,7 +66,7 @@ public class AlchemistShop {
    * @return The top shelf potions
    */
   public final List<Potion> getTopShelf() {
-    return Collections.unmodifiableList(this.topShelf);
+    return List.copyOf(this.topShelf);
   }
 
   /**
@@ -77,24 +75,16 @@ public class AlchemistShop {
    * @return The bottom shelf potions
    */
   public final List<Potion> getBottomShelf() {
-    return Collections.unmodifiableList(this.bottomShelf);
+    return List.copyOf(this.bottomShelf);
   }
 
   /**
-   * Enumerate potions.
+   * Drink all the potions.
    */
-  public void enumerate() {
-
-    LOGGER.info("Enumerating top shelf potions\n");
-
-    for (Potion p : topShelf) {
-      p.drink();
-    }
-
-    LOGGER.info("Enumerating bottom shelf potions\n");
-
-    for (Potion p : bottomShelf) {
-      p.drink();
-    }
+  public void drinkPotions() {
+    LOGGER.info("Drinking top shelf potions");
+    topShelf.forEach(Potion::drink);
+    LOGGER.info("Drinking bottom shelf potions");
+    bottomShelf.forEach(Potion::drink);
   }
 }
